--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -162,351 +162,351 @@ body > section > .holder > .title h2:after {
 }
 
 .optimism:hover i:nth-of-type(1) {
-  transform: translate3d(-41px, -57px, 0) rotate(132deg);
-  background: #ff0040;
+  transform: translate3d(46px, -51px, 0) rotate(212deg);
+  background: #f200ff;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(2) {
-  transform: translate3d(-18px, -87px, 0) rotate(260deg);
-  background: #ffbb00;
+  transform: translate3d(44px, -83px, 0) rotate(331deg);
+  background: #002fff;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(3) {
-  transform: translate3d(-52px, -60px, 0) rotate(260deg);
-  background: #8c00ff;
+  transform: translate3d(-39px, -81px, 0) rotate(41deg);
+  background: #ff0040;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(4) {
-  transform: translate3d(23px, -54px, 0) rotate(2deg);
-  background: #ff4400;
+  transform: translate3d(-52px, -53px, 0) rotate(272deg);
+  background: #00c4ff;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(5) {
-  transform: translate3d(-58px, -51px, 0) rotate(315deg);
-  background: #00ff4d;
+  transform: translate3d(2px, -86px, 0) rotate(29deg);
+  background: #7bff00;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(6) {
-  transform: translate3d(6px, -95px, 0) rotate(65deg);
-  background: #009dff;
+  transform: translate3d(43px, -78px, 0) rotate(90deg);
+  background: #4d00ff;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(7) {
-  transform: translate3d(12px, -86px, 0) rotate(220deg);
-  background: #ff8000;
+  transform: translate3d(36px, -82px, 0) rotate(41deg);
+  background: #00ffa2;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(8) {
-  transform: translate3d(5px, -56px, 0) rotate(265deg);
-  background: #e100ff;
+  transform: translate3d(-43px, -63px, 0) rotate(222deg);
+  background: #ffcc00;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(9) {
-  transform: translate3d(41px, -57px, 0) rotate(67deg);
-  background: #ff9500;
+  transform: translate3d(-44px, -52px, 0) rotate(350deg);
+  background: #11ff00;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(10) {
-  transform: translate3d(80px, -98px, 0) rotate(252deg);
-  background: #cc00ff;
-  animation: bang 700ms ease-out forwards infinite;
-  opacity: 0;
-}
-
-.optimism:hover i:nth-of-type(11) {
-  transform: translate3d(67px, -60px, 0) rotate(211deg);
-  background: #ff2600;
-  animation: bang 700ms ease-out forwards infinite;
-  opacity: 0;
-}
-
-.optimism:hover i:nth-of-type(12) {
-  transform: translate3d(37px, -64px, 0) rotate(261deg);
-  background: #ddff00;
-  animation: bang 700ms ease-out forwards infinite;
-  opacity: 0;
-}
-
-.optimism:hover i:nth-of-type(13) {
-  transform: translate3d(39px, -74px, 0) rotate(327deg);
-  background: #5500ff;
-  animation: bang 700ms ease-out forwards infinite;
-  opacity: 0;
-}
-
-.optimism:hover i:nth-of-type(14) {
-  transform: translate3d(-77px, -66px, 0) rotate(117deg);
-  background: #4000ff;
-  animation: bang 700ms ease-out forwards infinite;
-  opacity: 0;
-}
-
-.optimism:hover i:nth-of-type(15) {
-  transform: translate3d(-31px, -95px, 0) rotate(2deg);
-  background: #ff1100;
-  animation: bang 700ms ease-out forwards infinite;
-  opacity: 0;
-}
-
-.optimism:hover i:nth-of-type(16) {
-  transform: translate3d(90px, -59px, 0) rotate(356deg);
-  background: #0055ff;
-  animation: bang 700ms ease-out forwards infinite;
-  opacity: 0;
-}
-
-.optimism:hover i:nth-of-type(17) {
-  transform: translate3d(6px, -59px, 0) rotate(315deg);
-  background: #f700ff;
-  animation: bang 700ms ease-out forwards infinite;
-  opacity: 0;
-}
-
-.optimism:hover i:nth-of-type(18) {
-  transform: translate3d(-3px, -71px, 0) rotate(150deg);
-  background: #3cff00;
-  animation: bang 700ms ease-out forwards infinite;
-  opacity: 0;
-}
-
-.optimism:hover i:nth-of-type(19) {
-  transform: translate3d(73px, -96px, 0) rotate(242deg);
-  background: #0095ff;
-  animation: bang 700ms ease-out forwards infinite;
-  opacity: 0;
-}
-
-.optimism:hover i:nth-of-type(20) {
-  transform: translate3d(2px, -87px, 0) rotate(28deg);
-  background: #ff0004;
-  animation: bang 700ms ease-out forwards infinite;
-  opacity: 0;
-}
-
-.optimism:hover i:nth-of-type(21) {
-  transform: translate3d(35px, -97px, 0) rotate(123deg);
-  background: #0059ff;
-  animation: bang 700ms ease-out forwards infinite;
-  opacity: 0;
-}
-
-.optimism:hover i:nth-of-type(22) {
-  transform: translate3d(-82px, -81px, 0) rotate(343deg);
-  background: #00ffdd;
-  animation: bang 700ms ease-out forwards infinite;
-  opacity: 0;
-}
-
-.optimism:hover i:nth-of-type(23) {
-  transform: translate3d(-56px, -52px, 0) rotate(235deg);
-  background: #4dff00;
-  animation: bang 700ms ease-out forwards infinite;
-  opacity: 0;
-}
-
-.optimism:hover i:nth-of-type(24) {
-  transform: translate3d(0px, -73px, 0) rotate(309deg);
-  background: #ff6a00;
-  animation: bang 700ms ease-out forwards infinite;
-  opacity: 0;
-}
-
-.optimism:hover i:nth-of-type(25) {
-  transform: translate3d(-59px, -92px, 0) rotate(271deg);
-  background: #cc00ff;
-  animation: bang 700ms ease-out forwards infinite;
-  opacity: 0;
-}
-
-.optimism:hover i:nth-of-type(26) {
-  transform: translate3d(73px, -85px, 0) rotate(211deg);
-  background: #00ff2f;
-  animation: bang 700ms ease-out forwards infinite;
-  opacity: 0;
-}
-
-.optimism:hover i:nth-of-type(27) {
-  transform: translate3d(0px, -62px, 0) rotate(282deg);
-  background: #ff00b7;
-  animation: bang 700ms ease-out forwards infinite;
-  opacity: 0;
-}
-
-.optimism:hover i:nth-of-type(28) {
-  transform: translate3d(-10px, -60px, 0) rotate(196deg);
-  background: #ff00b7;
-  animation: bang 700ms ease-out forwards infinite;
-  opacity: 0;
-}
-
-.optimism:hover i:nth-of-type(29) {
-  transform: translate3d(46px, -99px, 0) rotate(77deg);
-  background: #007bff;
-  animation: bang 700ms ease-out forwards infinite;
-  opacity: 0;
-}
-
-.optimism:hover i:nth-of-type(30) {
-  transform: translate3d(14px, -93px, 0) rotate(336deg);
-  background: #00f2ff;
-  animation: bang 700ms ease-out forwards infinite;
-  opacity: 0;
-}
-
-.optimism:hover i:nth-of-type(31) {
-  transform: translate3d(-40px, -80px, 0) rotate(348deg);
-  background: #ffb700;
-  animation: bang 700ms ease-out forwards infinite;
-  opacity: 0;
-}
-
-.optimism:hover i:nth-of-type(32) {
-  transform: translate3d(-66px, -90px, 0) rotate(282deg);
-  background: #00ff48;
-  animation: bang 700ms ease-out forwards infinite;
-  opacity: 0;
-}
-
-.optimism:hover i:nth-of-type(33) {
-  transform: translate3d(-37px, -96px, 0) rotate(312deg);
-  background: #009dff;
-  animation: bang 700ms ease-out forwards infinite;
-  opacity: 0;
-}
-
-.optimism:hover i:nth-of-type(34) {
-  transform: translate3d(56px, -70px, 0) rotate(2deg);
-  background: #15ff00;
-  animation: bang 700ms ease-out forwards infinite;
-  opacity: 0;
-}
-
-.optimism:hover i:nth-of-type(35) {
-  transform: translate3d(-56px, -70px, 0) rotate(357deg);
-  background: #ff00e1;
-  animation: bang 700ms ease-out forwards infinite;
-  opacity: 0;
-}
-
-.optimism:hover i:nth-of-type(36) {
-  transform: translate3d(88px, -80px, 0) rotate(271deg);
-  background: #00d0ff;
-  animation: bang 700ms ease-out forwards infinite;
-  opacity: 0;
-}
-
-.optimism:hover i:nth-of-type(37) {
-  transform: translate3d(-27px, -68px, 0) rotate(58deg);
-  background: #4000ff;
-  animation: bang 700ms ease-out forwards infinite;
-  opacity: 0;
-}
-
-.optimism:hover i:nth-of-type(38) {
-  transform: translate3d(52px, -70px, 0) rotate(142deg);
+  transform: translate3d(75px, -57px, 0) rotate(239deg);
   background: #9d00ff;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
-.optimism:hover i:nth-of-type(39) {
-  transform: translate3d(-79px, -80px, 0) rotate(92deg);
-  background: #e6ff00;
+.optimism:hover i:nth-of-type(11) {
+  transform: translate3d(-52px, -76px, 0) rotate(175deg);
+  background: #ff0048;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
-.optimism:hover i:nth-of-type(40) {
-  transform: translate3d(-85px, -80px, 0) rotate(249deg);
-  background: #3c00ff;
+.optimism:hover i:nth-of-type(12) {
+  transform: translate3d(-14px, -72px, 0) rotate(350deg);
+  background: #001aff;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
-.optimism:hover i:nth-of-type(41) {
-  transform: translate3d(-85px, -62px, 0) rotate(70deg);
+.optimism:hover i:nth-of-type(13) {
+  transform: translate3d(-50px, -67px, 0) rotate(197deg);
   background: #00c8ff;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
-.optimism:hover i:nth-of-type(42) {
-  transform: translate3d(-8px, -54px, 0) rotate(267deg);
-  background: #ff7b00;
+.optimism:hover i:nth-of-type(14) {
+  transform: translate3d(-70px, -84px, 0) rotate(336deg);
+  background: #00ff88;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
-.optimism:hover i:nth-of-type(43) {
-  transform: translate3d(67px, -88px, 0) rotate(292deg);
-  background: #ff00f2;
+.optimism:hover i:nth-of-type(15) {
+  transform: translate3d(-14px, -95px, 0) rotate(186deg);
+  background: #00ff6a;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
-.optimism:hover i:nth-of-type(44) {
-  transform: translate3d(-37px, -54px, 0) rotate(337deg);
+.optimism:hover i:nth-of-type(16) {
+  transform: translate3d(-58px, -58px, 0) rotate(147deg);
+  background: #ff00b3;
+  animation: bang 700ms ease-out forwards infinite;
+  opacity: 0;
+}
+
+.optimism:hover i:nth-of-type(17) {
+  transform: translate3d(-90px, -60px, 0) rotate(72deg);
+  background: #ff5100;
+  animation: bang 700ms ease-out forwards infinite;
+  opacity: 0;
+}
+
+.optimism:hover i:nth-of-type(18) {
+  transform: translate3d(-43px, -76px, 0) rotate(218deg);
+  background: #9d00ff;
+  animation: bang 700ms ease-out forwards infinite;
+  opacity: 0;
+}
+
+.optimism:hover i:nth-of-type(19) {
+  transform: translate3d(4px, -81px, 0) rotate(66deg);
+  background: #ffe600;
+  animation: bang 700ms ease-out forwards infinite;
+  opacity: 0;
+}
+
+.optimism:hover i:nth-of-type(20) {
+  transform: translate3d(-5px, -79px, 0) rotate(206deg);
+  background: #00ffaa;
+  animation: bang 700ms ease-out forwards infinite;
+  opacity: 0;
+}
+
+.optimism:hover i:nth-of-type(21) {
+  transform: translate3d(-57px, -87px, 0) rotate(330deg);
+  background: #ff8400;
+  animation: bang 700ms ease-out forwards infinite;
+  opacity: 0;
+}
+
+.optimism:hover i:nth-of-type(22) {
+  transform: translate3d(49px, -53px, 0) rotate(231deg);
+  background: #f2ff00;
+  animation: bang 700ms ease-out forwards infinite;
+  opacity: 0;
+}
+
+.optimism:hover i:nth-of-type(23) {
+  transform: translate3d(-88px, -86px, 0) rotate(252deg);
+  background: #9100ff;
+  animation: bang 700ms ease-out forwards infinite;
+  opacity: 0;
+}
+
+.optimism:hover i:nth-of-type(24) {
+  transform: translate3d(-49px, -75px, 0) rotate(61deg);
+  background: #ffe100;
+  animation: bang 700ms ease-out forwards infinite;
+  opacity: 0;
+}
+
+.optimism:hover i:nth-of-type(25) {
+  transform: translate3d(68px, -73px, 0) rotate(39deg);
+  background: #00ffae;
+  animation: bang 700ms ease-out forwards infinite;
+  opacity: 0;
+}
+
+.optimism:hover i:nth-of-type(26) {
+  transform: translate3d(59px, -91px, 0) rotate(251deg);
+  background: #00ff48;
+  animation: bang 700ms ease-out forwards infinite;
+  opacity: 0;
+}
+
+.optimism:hover i:nth-of-type(27) {
+  transform: translate3d(-20px, -90px, 0) rotate(345deg);
+  background: #84ff00;
+  animation: bang 700ms ease-out forwards infinite;
+  opacity: 0;
+}
+
+.optimism:hover i:nth-of-type(28) {
+  transform: translate3d(-40px, -93px, 0) rotate(174deg);
+  background: #3700ff;
+  animation: bang 700ms ease-out forwards infinite;
+  opacity: 0;
+}
+
+.optimism:hover i:nth-of-type(29) {
+  transform: translate3d(70px, -99px, 0) rotate(83deg);
+  background: #ff2b00;
+  animation: bang 700ms ease-out forwards infinite;
+  opacity: 0;
+}
+
+.optimism:hover i:nth-of-type(30) {
+  transform: translate3d(-57px, -64px, 0) rotate(133deg);
   background: #00ff2b;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
+.optimism:hover i:nth-of-type(31) {
+  transform: translate3d(-41px, -99px, 0) rotate(144deg);
+  background: yellow;
+  animation: bang 700ms ease-out forwards infinite;
+  opacity: 0;
+}
+
+.optimism:hover i:nth-of-type(32) {
+  transform: translate3d(66px, -89px, 0) rotate(338deg);
+  background: #003cff;
+  animation: bang 700ms ease-out forwards infinite;
+  opacity: 0;
+}
+
+.optimism:hover i:nth-of-type(33) {
+  transform: translate3d(88px, -81px, 0) rotate(223deg);
+  background: #00ffbb;
+  animation: bang 700ms ease-out forwards infinite;
+  opacity: 0;
+}
+
+.optimism:hover i:nth-of-type(34) {
+  transform: translate3d(-91px, -62px, 0) rotate(244deg);
+  background: #ff4d00;
+  animation: bang 700ms ease-out forwards infinite;
+  opacity: 0;
+}
+
+.optimism:hover i:nth-of-type(35) {
+  transform: translate3d(57px, -81px, 0) rotate(69deg);
+  background: #ff00b7;
+  animation: bang 700ms ease-out forwards infinite;
+  opacity: 0;
+}
+
+.optimism:hover i:nth-of-type(36) {
+  transform: translate3d(12px, -88px, 0) rotate(21deg);
+  background: #2f00ff;
+  animation: bang 700ms ease-out forwards infinite;
+  opacity: 0;
+}
+
+.optimism:hover i:nth-of-type(37) {
+  transform: translate3d(48px, -60px, 0) rotate(119deg);
+  background: #d500ff;
+  animation: bang 700ms ease-out forwards infinite;
+  opacity: 0;
+}
+
+.optimism:hover i:nth-of-type(38) {
+  transform: translate3d(-38px, -61px, 0) rotate(329deg);
+  background: darkorange;
+  animation: bang 700ms ease-out forwards infinite;
+  opacity: 0;
+}
+
+.optimism:hover i:nth-of-type(39) {
+  transform: translate3d(-46px, -70px, 0) rotate(220deg);
+  background: #ffb700;
+  animation: bang 700ms ease-out forwards infinite;
+  opacity: 0;
+}
+
+.optimism:hover i:nth-of-type(40) {
+  transform: translate3d(35px, -54px, 0) rotate(93deg);
+  background: #ff0088;
+  animation: bang 700ms ease-out forwards infinite;
+  opacity: 0;
+}
+
+.optimism:hover i:nth-of-type(41) {
+  transform: translate3d(-26px, -99px, 0) rotate(173deg);
+  background: #2f00ff;
+  animation: bang 700ms ease-out forwards infinite;
+  opacity: 0;
+}
+
+.optimism:hover i:nth-of-type(42) {
+  transform: translate3d(-97px, -92px, 0) rotate(118deg);
+  background: #001eff;
+  animation: bang 700ms ease-out forwards infinite;
+  opacity: 0;
+}
+
+.optimism:hover i:nth-of-type(43) {
+  transform: translate3d(16px, -62px, 0) rotate(298deg);
+  background: #ff0059;
+  animation: bang 700ms ease-out forwards infinite;
+  opacity: 0;
+}
+
+.optimism:hover i:nth-of-type(44) {
+  transform: translate3d(-93px, -60px, 0) rotate(212deg);
+  background: #ff0091;
+  animation: bang 700ms ease-out forwards infinite;
+  opacity: 0;
+}
+
 .optimism:hover i:nth-of-type(45) {
-  transform: translate3d(-85px, -99px, 0) rotate(120deg);
-  background: #ff0077;
+  transform: translate3d(18px, -95px, 0) rotate(223deg);
+  background: #ff9500;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(46) {
-  transform: translate3d(78px, -63px, 0) rotate(162deg);
-  background: #91ff00;
+  transform: translate3d(-44px, -76px, 0) rotate(83deg);
+  background: #ff0011;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(47) {
-  transform: translate3d(-14px, -53px, 0) rotate(108deg);
-  background: #7300ff;
+  transform: translate3d(-89px, -57px, 0) rotate(119deg);
+  background: #ff0080;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(48) {
-  transform: translate3d(16px, -68px, 0) rotate(234deg);
-  background: #00d5ff;
+  transform: translate3d(1px, -90px, 0) rotate(263deg);
+  background: #3c00ff;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(49) {
-  transform: translate3d(-63px, -90px, 0) rotate(124deg);
-  background: #009dff;
+  transform: translate3d(-20px, -58px, 0) rotate(97deg);
+  background: #40ff00;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
 
 .optimism:hover i:nth-of-type(50) {
-  transform: translate3d(73px, -70px, 0) rotate(137deg);
-  background: #ddff00;
+  transform: translate3d(-18px, -50px, 0) rotate(106deg);
+  background: #6a00ff;
   animation: bang 700ms ease-out forwards infinite;
   opacity: 0;
 }
@@ -688,6 +688,8 @@ body > section > .holder > .title h2:after {
 
 #resume .grid .gallery_container .project_info button {
   -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 
 .pop {
