--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -443,6 +443,8 @@ body > section {
       }
       button{
         -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
       }
 
     }
